--- a/airflow_home/airflow.cfg
+++ b/airflow_home/airflow.cfg
@@ -127,7 +127,7 @@ max_active_runs_per_dag = 16
 # Whether to load the DAG examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
 # environment
-load_examples = False
+load_examples = True
 
 # Whether to load the default connections that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
@@ -138,7 +138,7 @@ load_default_connections = True
 plugins_folder = airflow_home//plugins
 
 # Secret key to save connection passwords in the db
-fernet_key = YQHXr5A_6fU9X0MatdEAp6HGqOGpitDtTxOElRyolwE=
+fernet_key = 1WKvGcjQ4BG4o6lWhjCe0pmmvEEyk0ma3pM6RMO-UCQ=
 
 # Whether to disable pickling dags
 donot_pickle = False
@@ -279,7 +279,7 @@ base_url = http://localhost:8080
 # any IANA timezone string (e.g. Europe/Amsterdam). If left empty the
 # default value of core/default_timezone will be used
 # Example: default_ui_timezone = America/New_York
-default_ui_timezone = UTC+8
+default_ui_timezone = UTC
 
 # The ip specified when starting the web server
 web_server_host = 0.0.0.0
