--- a/airflow_home/airflow.cfg
+++ b/airflow_home/airflow.cfg
@@ -243,7 +243,7 @@ fail_fast = False
 
 [api]
 # How to authenticate users of the API
-auth_backend = airflow.api.auth.backend.default
+# auth_backend = airflow.contrib.auth.backends.password_auth
 
 [lineage]
 # what lineage backend to use
@@ -270,6 +270,8 @@ default_gpus = 0
 default_hive_mapred_queue =
 
 [webserver]
+
+auth_backend = airflow.contrib.auth.backends.password_auth
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
@@ -337,7 +339,7 @@ expose_stacktrace = True
 
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
-authenticate = False
+authenticate = True
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
@@ -382,7 +384,7 @@ hide_paused_dags_by_default = False
 page_size = 100
 
 # Use FAB-based webserver with RBAC feature
-rbac = False
+rbac = True
 
 # Define the color of navigation bar
 navbar_color = #007A87
