--- a/airflow_home/airflow.cfg
+++ b/airflow_home/airflow.cfg
@@ -273,6 +273,8 @@ default_hive_mapred_queue =
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
+authenticate = False
+auth_backend = airflow.contrib.auth.backends.password_auth
 base_url = http://localhost:8080
 
 # Default timezone to display all dates in the RBAC UI, can be UTC, system, or
@@ -337,7 +339,7 @@ expose_stacktrace = True
 
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
-authenticate = False
+
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
