--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ apispec==1.3.3
 argcomplete==1.11.1
 attrs==19.3.0
 Babel==2.8.0
+bcrypt==3.1.7
 boto3==1.14.19
 botocore==1.17.19
 cached-property==1.5.1
@@ -31,6 +32,7 @@ Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-AppBuilder==2.3.0
 Flask-Babel==1.0.0
+Flask-Bcrypt==0.7.1
 Flask-Caching==1.3.3
 Flask-JWT-Extended==3.24.1
 Flask-Login==0.4.1
